# clij

./: README.md  pyproject.toml  requirements.txt  result.csv
cache/: config.json
cache/workroom/: CAU3  CAU4  CAU4.cpp  problema  problema.cpp
contest/contestants/july/: cau3.cpp
contest/testcases/CAU3/Test001/: CAU3.inp
contest/testcases/CAU3/Test002/: CAU3.inp
contest/testcases/CAU3/Test003/: CAU3.inp
contest/testcases/CAU3/Test004/: CAU3.inp
contest/testcases/CAU3/Test005/: CAU3.inp
contest/testcases/CAU3/Test006/: CAU3.inp
contest/testcases/CAU3/Test007/: CAU3.inp
contest/testcases/CAU3/Test008/: CAU3.inp
contest/testcases/CAU3/Test009/: CAU3.inp
contest/testcases/CAU3/Test010/: CAU3.inp
contest/testcases/CAU3/Test011/: CAU3.inp
contest/testcases/CAU3/Test012/: CAU3.inp
contest/testcases/CAU3/Test013/: CAU3.inp
contest/testcases/CAU3/Test014/: CAU3.inp
contest/testcases/CAU3/Test015/: CAU3.inp
contest/testcases/CAU3/Test016/: CAU3.inp
contest/testcases/CAU3/Test017/: CAU3.inp
contest/testcases/CAU3/Test018/: CAU3.inp
contest/testcases/CAU3/Test019/: CAU3.inp
contest/testcases/CAU3/Test020/: CAU3.inp
contest/testcases/CAU4/Test001/: CAU4.inp
contest/testcases/CAU4/Test002/: CAU4.inp
contest/testcases/CAU4/Test003/: CAU4.inp
contest/testcases/CAU4/Test004/: CAU4.inp
contest/testcases/CAU4/Test005/: CAU4.inp
src/clij/: main.py
src/clij/commands/: auto_detect_info.py  start.py
src/clij/utils/: check_answer.py  compile_code.py  copy_file.py  get_file_extension.py  run_code.py
(+15 files in other folders)
